--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
 
     <title>Contact Us</title>
     <style>
-         html,
+       html,
         body {
             margin: 0;
             padding: 0;
@@ -94,19 +94,18 @@
             position: absolute;
             /* Positioned within the wrapper */
             z-index: 2;
-            padding: 10px;
+            padding: 1vw;
             /* Optional padding */
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
         }
 
         .top-bar {
             display: flex;
             justify-content: space-between;
             color: white;
-            padding-top: 4em;
+            padding-top: 4vw;
 
         }
 
@@ -115,7 +114,7 @@
             font-weight: 700;
             font-family: "Josefin Sans", sans-serif;
             font-optical-sizing: auto;
-            font-size: 2.5em;
+            font-size: 4vw;
             padding-left: 10%;
         }
 
@@ -123,6 +122,7 @@
             display: flex;
             gap: 2em;
             font-family: "Alata", sans-serif;
+            font-size:1.5vw;
             font-weight: 500;
             font-style: normal;
             padding-right: 10%;
@@ -131,14 +131,14 @@
 
         .hero-text {
             color: white;
-            margin-left: 10%;
+            margin-left: 10vw;
             margin-top: 5%;
             padding: 0.5em;
             font-family: "Quicksand", sans-serif;
             font-size: 4vw;
             border: 3px solid white;
-            width: 30vw;
-
+            width: 40vw;
+            font-weight: bold;
 
         }
 
