--- a/index.html
+++ b/index.html
@@ -111,19 +111,18 @@ window.addEventListener('scroll', function () {
             position: absolute;
             /* Positioned within the wrapper */
             z-index: 2;
-            padding: 10px;
+            padding: 1vw;
             /* Optional padding */
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
         }
 
         .top-bar {
             display: flex;
             justify-content: space-between;
             color: white;
-            padding-top: 4em;
+            padding-top: 4vw;
 
         }
 
@@ -132,7 +131,7 @@ window.addEventListener('scroll', function () {
             font-weight: 700;
             font-family: "Josefin Sans", sans-serif;
             font-optical-sizing: auto;
-            font-size: 2.5em;
+            font-size: 4vw;
             padding-left: 10%;
         }
 
@@ -140,6 +139,7 @@ window.addEventListener('scroll', function () {
             display: flex;
             gap: 2em;
             font-family: "Alata", sans-serif;
+            font-size:1.5vw;
             font-weight: 500;
             font-style: normal;
             padding-right: 10%;
