--- a/login.html
+++ b/login.html
@@ -52,12 +52,11 @@
 
     <title>Login</title>
     <style>
-         html,
+       html,
         body {
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            overflow-y: hidden;
             background-color: black;
             color:white;
         }
@@ -85,12 +84,13 @@
             width: 100vw;
             height: auto;
             /* Maintains aspect ratio */
-             object-fit: contain; 
+
             z-index: 0;
+            object-fit: cover;
             display: block;
             mask-image: linear-gradient(
     to bottom, 
-    rgba(0, 0, 0, 1) 50%,  /* Fully visible at 60% */
+    rgba(0, 0, 0, 1) 60%,  /* Fully visible at 60% */
     rgba(0, 0, 0, 0) 100%  /* Fully transparent at the bottom */
   );
         }
@@ -100,7 +100,7 @@
             position: absolute;
             z-index: 1;
             background-color: black;
-            opacity: 0%;
+            opacity: 60%;
             top: 0;
             left: 0;
             width: 100%;
@@ -111,19 +111,18 @@
             position: absolute;
             /* Positioned within the wrapper */
             z-index: 2;
-            padding: 10px;
+            padding: 1vw;
             /* Optional padding */
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
         }
 
         .top-bar {
             display: flex;
             justify-content: space-between;
             color: white;
-            padding-top: 4em;
+            padding-top: 4vw;
 
         }
 
@@ -132,7 +131,7 @@
             font-weight: 700;
             font-family: "Josefin Sans", sans-serif;
             font-optical-sizing: auto;
-            font-size: 2.5em;
+            font-size: 4vw;
             padding-left: 10%;
         }
 
@@ -140,6 +139,7 @@
             display: flex;
             gap: 2em;
             font-family: "Alata", sans-serif;
+            font-size:1.5vw;
             font-weight: 500;
             font-style: normal;
             padding-right: 10%;
@@ -148,14 +148,14 @@
 
         .hero-text {
             color: white;
-            margin-left: 10%;
+            margin-left: 10vw;
             margin-top: 5%;
             padding: 0.5em;
             font-family: "Quicksand", sans-serif;
             font-size: 4vw;
             border: 3px solid white;
-            width: 30vw;
-
+            width: 40vw;
+            font-weight: bold;
 
         }
 
